--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script type="text/javascript">
   // Your Client ID can be retrieved from your project in the Google
   // Developer Console, https://console.developers.google.com
-  var CLIENT_ID = '<YOUR_CLIENT_ID>';
+  var CLIENT_ID = '620760987090-ncpthf64vkca54210079fvlebpi2jep9.apps.googleusercontent.com';
 
   var SCOPES = ['https://www.googleapis.com/auth/drive.metadata.readonly'];
 
