--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   * Load Drive API client library.
   */
   function loadDriveApi() {
-    gapi.client.load('drive', 'v3', listFiles);
+    gapi.client.load('drive', 'v3', getFile);
   }
 
   /**
