--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   * Get file
   */
   function getFile(id='1SHx9uEXfIjOqvyMKN9TC1_jTjnTbogCu64VPcyuF_XM') {
-    var request = gapi.client.drive.files.get({ 'fileId': id, 'mimeType': 'text/csv' });
+    var request = gapi.client.drive.files.export({ 'fileId': id, 'mimeType': 'text/csv' });
 
     request.execute(function(resp) {
       appendPre(resp);
