--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
 
+  <script src="jquery-2.1.4.min.js"></script>
   <!-- Google Authorization -->
   <script type="text/javascript">
   // Your Client ID can be retrieved from your project in the Google
