--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
 
-  <script src="jquery-2.1.4.min.js"></script>
+  <script src="jquery-3.1.1.min.js"></script>
   <!-- Google Authorization -->
+  <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
   <script type="text/javascript">
   // Your Client ID can be retrieved from your project in the Google
   // Developer Console, https://console.developers.google.com
@@ -19,60 +20,17 @@
   var SCOPES = [ 'https://www.googleapis.com/auth/drive.readonly' ];  // View the files in your Google Drive
   var accessToken = '';
 
-  /**
-  * Check if current user has authorized this application.
-  */
-  function checkAuth() {
-    gapi.auth.authorize({
-        'client_id': CLIENT_ID,
-        'scope': SCOPES.join(' '),
-        'immediate': true
-      }, handleAuthResult);
-  }
-
-  /**
-  * Handle response from authorization server.
-  *
-  * @param {Object} authResult Authorization result.
-  */
-  function handleAuthResult(authResult) {
-    var authorizeDiv = document.getElementById('authorize-div');
-    if (authResult && !authResult.error) {
-      // Hide auth UI, then load client library.
-      authorizeDiv.style.display = 'none';
-      accessToken = authResult.access_token;
-      loadDriveApi();
-    } else {
-      // Show auth UI, allowing the user to initiate authorization by
-      // clicking authorize button.
-      authorizeDiv.style.display = 'inline';
-    }
-  }
-
-  /**
-  * Initiate auth flow in response to user clicking authorize button.
-  *
-  * @param {Event} event Button click event.
-  */
-  function handleAuthClick(event) {
-    gapi.auth.authorize({client_id: CLIENT_ID, scope: SCOPES, immediate: false}, handleAuthResult);
-    return false;
-  }
-
-  /**
-  * Load Drive API client library.
-  */
-  function loadDriveApi() {
-    gapi.client.load('drive', 'v3', getFile);
-  }
+  gapi.load('auth2', init);
 
   /**
   * Get file
   */
   function getFile(id='1SHx9uEXfIjOqvyMKN9TC1_jTjnTbogCu64VPcyuF_XM') {
+    var user = gapi.auth2.getAuthInstance().currentUser.get();
+    var oauthToken = user.getAuthResponse().access_token;
     var xhr = new XMLHttpRequest();
     xhr.open('GET', `https://www.googleapis.com/drive/v3/files/${id}/export?mimeType="text/csv"`);
-    xhr.setRequestHeader('Authorization', 'Bearer ', accessToken);
+    xhr.setRequestHeader('Authorization', 'Bearer ', oauthToken.accessToken);
     xhr.onerror = function() {
       $('#output').html('Ups: parece que se ha producido un error');
     };
@@ -80,16 +38,8 @@
       $('#output').html(`Todo bien:\n${xhr.responseText}`);
     };
     xhr.send();
-
-    // gapi.client.drive.files.export({ 'fileId': id, 'mimeType': 'text/csv' }).then(function(resp) {
-    //   console.log(resp.result);
-    // }, function(reason) {
-    //   console.log('Error: ' + reason.result.error.message);
-    // });
   }
 
-  </script>
-  <script src="https://apis.google.com/js/client.js?onload=checkAuth">
   </script>
 </head>
 
