--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="jquery-3.1.1.min.js"></script>
   <!-- Google Authorization -->
   <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
+  <script src="https://apis.google.com/js/client.js"></script>
   <script type="text/javascript">
   // Your Client ID can be retrieved from your project in the Google
   // Developer Console, https://console.developers.google.com
