Display login out buttons

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <section class="main-content">
     <h1><a id="taskmanager" class="anchor" href="#taskmanager" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>taskManager</h1>
     <p>Manages tasks</p>
-    <div id="authorize-div" style="display: none">
+    <div id="authorize-div">
       <span>Authorize access to Drive API</span>
       <!--Button for the user to click to initiate auth sequence -->
       <button id="signin-button" onclick="handleSigninClick(event)">Sign in</button>
