--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       var user = gapi.auth2.getAuthInstance().currentUser.get();
       var oauthToken = user.getAuthResponse().access_token;
       var xhr = new XMLHttpRequest();
-      xhr.open('GET', `https://www.googleapis.com/drive/v3/files/${id}/export?mimeType="text/csv"`);
+      xhr.open('GET', 'https://www.googleapis.com/drive/v3/files/' + id + '/export?mimeType="text/csv"');
       xhr.setRequestHeader('Authorization', 'Bearer ', oauthToken);
       xhr.onerror = function() {
         $('#output').html('Ups: parece que se ha producido un error');
