Remove top buttons

--- a/index.html
+++ b/index.html
@@ -93,13 +93,10 @@
   <section class="page-header">
     <h1 class="project-name">Taskmanager</h1>
     <h2 class="project-tagline">Manages tasks</h2>
-    <a href="https://github.com/ArianJM/taskManager" class="btn">View on GitHub</a>
-    <a href="https://github.com/ArianJM/taskManager/zipball/master" class="btn">Download .zip</a>
-    <a href="https://github.com/ArianJM/taskManager/tarball/master" class="btn">Download .tar.gz</a>
   </section>
 
   <section class="main-content">
-    <h1><a id="taskmanager" class="anchor" href="#taskmanager" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>taskManager</h1>
+    <h1><a id="taskmanager" class="anchor" href="#taskmanager" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Task Manager</h1>
     <p>Manages tasks</p>
     <div id="authorize-div">
       <span>Authorize access to Drive API</span>
