--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="script.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body onload="initAuth()">
     <section class="page-header">
         <h1 class="project-name">Taskmanager</h1>
         <h2 class="project-tagline">Manages tasks</h2>
