Add local jekyll

--- a/index.html
+++ b/index.html
@@ -1,26 +1,8 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-    <meta charset="UTF-8">
-    <title>Taskmanager by ArianJM</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+---
+layout: default
+---
 
-    <script src="jquery-3.1.1.min.js"></script>
-    <!-- Google Authorization -->
-    <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
-    <script src="https://apis.google.com/js/client.js"></script>
-    <script src="script.js" type="text/javascript"></script>
-</head>
-
-<body>
-    <section class="page-header">
-        <h1 class="project-name">Taskmanager</h1>
-        <h2 class="project-tagline">Manages tasks</h2>
-    </section>
+<div class="home">
 
     <section class="main-content">
         <h1><a id="taskmanager" class="anchor" href="#taskmanager" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Task Manager</h1>
@@ -41,6 +23,4 @@
 
     </section>
 
-
-</body>
-</html>
+</div>
