Add many things... styling for table, jqueryUI, expanding on click, and few more things.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@ layout: default
             <button id="signout-button">Sign out</button>
         </div>
 
+        <div class="table-agreements">
+            <table id="acuerdos" style="display: none">
+                <thead>
+                    <tr>
+                        <th class="identificador">#</th>
+                        <th class="responsable" alt="Responsable">Resp.</th>
+                        <th class="decision">Decisión</th>
+                        <th class="fecha">Fecha</th>
+                        <th class="email">Email</th>
+                        <th class="urgencia" alt="Urgencia">Urg.</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+
         <div id="error-div" style="display: none">There is no data</div>
     </section>
 
