--- a/editar-acuerdo.html
+++ b/editar-acuerdo.html
@@ -2,37 +2,18 @@
 layout: default
 ---
 
+<script src="js/edit.js" type="text/javascript"></script>
+
 <div class="home">
-    {% include acuerdo-modal.html %}
-
     <section class="main-content">
-        <h1><a id="taskmanager" class="anchor" href="#taskmanager" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Task Manager</h1>
-        <p>Manages tasks</p>
-        <div id="authorize-div">
-            <span>Authorize access to Drive API</span>
-            <!--Button for the user to click to initiate auth sequence -->
-            <button id="signin-button">Sign in</button>
-            <button id="signout-button">Sign out</button>
-        </div>
-
-        <div class="table-agreements">
-            <table id="acuerdos" style="display: none">
-                <thead>
-                    <tr>
-                        <th class="identificador">#</th>
-                        <th class="responsable" alt="Responsable">Resp.</th>
-                        <th class="decision">Decisión</th>
-                        <th class="fecha">Fecha</th>
-                        <th class="email">Email</th>
-                        <th class="urgencia" alt="Urgencia">Urg.</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
-
         <div id="error-div" style="display: none">There is no data</div>
+        <div class="acuerdo">
+            <p>Responsable: <input id="responsable" type="text" name="responsable" class="editar"></p>
+            <p>Fecha: <input id="fecha" type="text" name="fecha" class="editar"></p>
+            <p>Email: <input id="email" type="text" name="email" class="editar"></p>
+            <p>Urgencia: <input id="urgencia" type="text" name="urgencia" class="editar"></p>
+            <p>Decision: <textarea id="decision" type="text" rows="4" cols="50" class="editar"></textarea></p>
+            <p>Comentarios: <textarea id="comentarios" type="text" rows="4" cols="50" class="editar"></textarea></p>
+        </div>
     </section>
-
 </div>
