--- a/index.html
+++ b/index.html
@@ -2,19 +2,12 @@
 layout: default
 ---
 
+<script src="js/main.js" type="text/javascript"></script>
+
 <div class="home">
     {% include acuerdo-modal.html %}
 
     <section class="main-content">
-        <h1><a id="taskmanager" class="anchor" href="#taskmanager" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Task Manager</h1>
-        <p>Manages tasks</p>
-        <div id="authorize-div">
-            <span>Authorize access to Drive API</span>
-            <!--Button for the user to click to initiate auth sequence -->
-            <button id="signin-button">Sign in</button>
-            <button id="signout-button">Sign out</button>
-        </div>
-
         <div class="table-agreements">
             <table id="acuerdos" style="display: none">
                 <thead>
